--- a/src/components/tabletop.module.scss
+++ b/src/components/tabletop.module.scss
@@ -11,6 +11,7 @@
 
   .right {
     width: 80vw;
+    padding-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
