--- a/src/components/tabletop-controls.module.scss
+++ b/src/components/tabletop-controls.module.scss
@@ -8,7 +8,8 @@
     margin: 10px;
   }
   // Horizontal Positioning
-  .dirUp,.dirDown {
+  .dirUp,
+  .dirDown {
     grid-column-start: 2;
     grid-column-end: 4;
   }
@@ -25,7 +26,8 @@
     grid-row-start: 1;
     grid-row-end: 2;
   }
-  .dirLeft,.dirRight {
+  .dirLeft,
+  .dirRight {
     grid-row-start: 2;
     grid-row-end: 3;
   }
@@ -40,7 +42,8 @@
     grid-template-rows: repeat(2, 1fr);
 
     // Horizontal Positioning
-    .dirUp,.dirDown {
+    .dirUp,
+    .dirDown {
       grid-column-start: 2;
       grid-column-end: 3;
     }
@@ -57,7 +60,9 @@
       grid-row-start: 1;
       grid-row-end: 2;
     }
-    .dirLeft, .dirDown, .dirRight {
+    .dirLeft,
+    .dirDown,
+    .dirRight {
       grid-row-start: 2;
       grid-row-end: 3;
     }
@@ -71,18 +76,17 @@
     @include sm {
       width: 50px;
     }
-  
+
     @include md {
       width: 70px;
     }
   }
-
 }
 
 .gridItem {
   border: solid 1px #000;
 
   &.current {
-    background-color: #F00;
+    background-color: #f00;
   }
 }
